--- a/client/src/styles/scss/AddressInfoCard.module.scss
+++ b/client/src/styles/scss/AddressInfoCard.module.scss
@@ -6,7 +6,7 @@
   background: white;
   border-radius: 2em;
   padding: 5em 0;
-  z-index: 99;
+  z-index: 403;
   box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.2);
 
   h2 {
